--- a/sass/modules/_mobile.scss
+++ b/sass/modules/_mobile.scss
@@ -1,20 +1,19 @@
-@import "_vars";
-
-@media (max-width: 375px) {
+@media (max-width: 479px) {
 	
 body
 {
   margin: 0;
   padding: 0;
   background-color: $main-app-color;
-  font-family: "Helvetica Neue", Avenir, sans-serif; /*change to sass*/
+  font-family: $font-stock;
 }
 
 a
 {
   text-decoration: none;
   transition: color 0.7s ease;
-  color: $main-font-color;
+  color: $dark-grey;
+  font-weight: bold;
 }
 
 a:hover
@@ -40,7 +39,7 @@ a:hover
 #menuToggle
 {
   display: block;
-  position: absolute;
+  position: fixed;
   top: 50px;
   left: 50px;
   z-index: 1;
@@ -55,8 +54,8 @@ a:hover
   top: -7px;
   left: -5px;
   cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+  opacity: 0; 
+  z-index: 2; 
 }
 
 #menuToggle span
@@ -66,7 +65,7 @@ a:hover
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  background: black;
+  background: $dark-grey;
   z-index: 1;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
@@ -75,43 +74,26 @@ a:hover
 }
 
 
-
-
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
 #menuToggle input:checked ~ span
 {
   opacity: 1;
   transform: rotate(47deg) translate(2px, -1px);
-  background: black;
+  background: $dark-grey;
 }
 
-/*
- * But let's hide the middle one.
- */
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
 }
 
-/*
- * Ohyeah and the last one should go the other direction
- */
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-47deg) translate(0, -1px);
 }
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
+	
 #menu
 {
-  position: absolute;
+  position: fixed;
   margin: -100px 0 0 -50px;
   width: 200px;
   padding-top: 100px;
@@ -129,9 +111,7 @@ a:hover
   font-size: 1.3em;
 }
 
-/*
- * And let's slide it in from the left
- */
+
 #menuToggle input:checked ~ ul
 {
   transform: none;
@@ -152,11 +132,11 @@ position: relative;
 
 #header h1
 {
-color: $yellow-font-color;
+color: $yellow-font-color;;
 position: absolute;
-font-size: 5em; /*change with media queries*/
+font-size: 3em;
 margin-left: 20px;
-margin-top: -200px;
+margin-top: -150px;
 }
 
 
@@ -179,7 +159,7 @@ margin-top: -200px;
 	position: absolute;
 	top: 5%;
 	text-align: right;
-	font-size: 2.4em; /*change with media queries*/
+	font-size: 2.4em; 
 	margin-left: 60%;
 	margin-right:15px;
 }
@@ -234,7 +214,7 @@ margin-top: -200px;
 	top: 60%;
 	text-align: right;
 	font-size: 2.4em;
-	margin-left: 60%;
+	margin-left: 50%;
 }
 	
 #alliBio
