--- a/sass/modules/_mobile.scss
+++ b/sass/modules/_mobile.scss
@@ -132,11 +132,12 @@ position: relative;
 
 #header h1
 {
-color: $yellow-font-color;;
+color: $yellow-font-color;
 position: absolute;
 font-size: 3em;
 margin-left: 20px;
 margin-top: -150px;
+text-shadow: 0px 0px 20px $dark-grey, 0px 0px 30px $light-grey;
 }
 
 
@@ -160,8 +161,9 @@ margin-top: -150px;
 	top: 5%;
 	text-align: right;
 	font-size: 2.4em; 
-	margin-left: 60%;
-	margin-right:15px;
+	margin-left: 40%;
+	margin-right:10px;
+	text-shadow: 0px 0px 1px $yellow-font-color, 0px 0px 1px $yellow-font-color;
 }
 
 #team span /*white line under meet the team*/
@@ -171,15 +173,14 @@ margin-top: -150px;
   height: 5px;
   position: absolute;
   top: 107%;
-  margin-left: 60%;
   background: $main-app-color;
-  margin-right:15px;
+  margin-left:45%;
 }
 
 .teamImg
 {
-	-webkit-filter: contrast(50%);
-    filter: contrast(50%);
+	-webkit-filter: contrast(45%);
+    filter: contrast(45%);
 	display: block;
 }
 
@@ -187,11 +188,11 @@ margin-top: -150px;
 {
 	color: $main-app-color;
 	position: absolute;
-	top: 60%;
 	text-align: right;
-	font-size: 120%; /*change with media queries*/
+	font-size: 120%; 
 	margin-left: 10%;
 	padding-right: 10%;
+	margin-top: -240px;
 }
 
 
@@ -219,7 +220,7 @@ margin-top: -150px;
 	
 #alliBio
 {
-	color: black;
+	color: $dark-grey;
     display: block;
     text-align: right;
 	height:300px;
@@ -258,7 +259,7 @@ margin-top: -150px;
 	
 #sorayaBio
 {
-	color: black;
+	color: $dark-grey;
     position: block;
     text-align: right;
 	height:300px;
@@ -285,6 +286,9 @@ margin-top: -150px;
 	-ms-transform: skewY(-20deg);
 	-webkit-transform: skewY(-20deg);
 	transform: skewY(-20deg);
+	border-bottom-color: $yellow-font-color;
+	border-bottom-width: 30px;
+	border-bottom-style: solid;
 }
 	
 	#quote p
@@ -297,7 +301,12 @@ margin-top: -150px;
 	transform: skewY(20deg);
 	color: $main-app-color;
 	padding-top: 30%;
+	font-style: italic;
+	line-height: 50px;
+	letter-spacing: 4px;
 }
+
+
 	
 	
 	
@@ -315,7 +324,7 @@ margin-top: -150px;
 	
 #portfolioText
 {
-	color: $main-app-color; 
+	color: $main-app-color;
 	position: absolute;
 	top: 30%;
 	text-align: center;
@@ -332,6 +341,10 @@ margin-top: -150px;
 #portfolioAbout p
 {
 	text-align: center;
+	color: $dark-grey;
+	font-size: 1.1em;
+	padding-left: 10px;
+	padding-right: 10px;
 		
 }
 	
@@ -359,7 +372,7 @@ margin-top: -150px;
 	
 	#webDesign h2
 	{
-	color: $light-grey; 
+	color: $dark-grey; 
 	-ms-transform: skewY(20deg);
 	-webkit-transform: skewY(20deg);
 	transform: skewY(20deg);
@@ -370,14 +383,15 @@ margin-top: -150px;
 	
 	
 	#webDesign p{
-	color: $light-grey; 
+	color: $dark-grey; 
 	-ms-transform: skewY(20deg);
 	-webkit-transform: skewY(20deg);
 	transform: skewY(20deg);
 	text-align:center;
 	padding: 20px;
 	padding-top: 20px;
-		font-size: 1.5em;
+	font-size: 1.1em;
+	line-height: 1.3em;
 		
 	}
 	
@@ -389,7 +403,7 @@ margin-top: -150px;
 	transform: skewY(20deg);
 	display: block;
 	position: relative;
-	padding-top:100px;
+	padding-top:150px;
 	}
 	
 	#webDesignText
@@ -399,14 +413,16 @@ margin-top: -150px;
 		display: block;
 		height: 200px;
 		width: 100%;
-		margin-top:480px;
+		margin-top:380px;
 	}
 	
 	#webDesignText p
 	{
-		color: $main-app-color;
+		color: $dark-grey;
 		text-align: center;
 		padding: 30px;
+		font-size: 1.1em;
+		line-height: 1.2em;
 	}
 	
 	
@@ -426,12 +442,13 @@ margin-top: -150px;
 	
 	#graphicDesign h2
 	{
-	color: $light-grey; 
+	color: $dark-grey; 
 	-ms-transform: skewY(-20deg);
 	-webkit-transform: skewY(-20deg);
 	transform: skewY(-20deg);
 	font-size: 2.4em;
 	padding: 20px;
+	padding-top:40px;
 	margin-left: 5px;
 	text-align: left;
 	margin-top: 100px;
@@ -439,14 +456,14 @@ margin-top: -150px;
 	
 	
 	#graphicDesign p{
-	color: $light-grey; 
+	color: $dark-grey; 
 	-ms-transform: skewY(-20deg);
 	-webkit-transform: skewY(-20deg);
 	transform: skewY(-20deg);
 	text-align:center;
 	padding: 20px;
-	padding-top: 20px;
-	font-size: 1.5em;
+	font-size: 1.1em;
+	line-height: 1.2em;
 	position:absolute;
 	display: block;
 		
@@ -458,45 +475,65 @@ margin-top: -150px;
 	#graphicDesignText
 	{
 		width: 100%;
-		background-color: #000;
-		margin-top: 200px;
-		height:450px;
+		background-color: $light-grey;
+		margin-top: 18%;
 	}
 
 	#mi
 	{
-		width: 50%;
-		float: left;
-		display: block;
-		position: relative;
+		cursor: pointer;
 	}
-	
-	#miText
+
+	#logotext1
 	{
-		width: 50%;
-		float: left;
 		color: $main-app-color;
-		position: relative;
-		display: block;
-		position: relative;
-	}
-	
-	#seaStudiosText
-	{
-		width: 50%;
-		float: left;
-		color: $main-app-color;
-		display: block;
-		position: relative;
+		text-align: center;
 	}
 	
 	#seaStudios
 	{
-		width: 50%;
-		float: left;
-		display: block;
-		position: relative;
+		cursor: pointer;
 	}
+
+	#logotext2
+	{
+		color: $main-app-color;
+		text-align: center;
+	}
+
+	#seaStudios:hover
+{
+	opacity: 0.8;
+}
+
+#mi:hover
+{
+	opacity: 0.8;
+}
+
+.content
+{
+	position:absolute;
+    height:100%;
+    width:100%; 
+}
+
+.content .rs{
+    width:auto;
+    height:auto;
+    max-height:100%;
+    max-width:100%;
+}
+
+.square {
+    float:left;
+    position: relative;
+    width: 50%;
+    padding-bottom : 50%; 
+    background-color: $light-grey;
+	overflow:hidden;
+}
+
 	
 	
 
@@ -522,9 +559,9 @@ margin-top: -150px;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    overflow: auto;
+	background-color: $dark-grey;
+    background-color: rgba(0,0,0,0.9);
 }
 
 /* Modal Content (Image) */
@@ -593,26 +630,11 @@ margin-top: -150px;
     cursor: pointer;
 }
 
-	.pic
-{
-	width: 250px;
-	height: 250px;
-	padding: 5px;
-	text-align: center;
-	opacity: 0.9;
-}
-
 #lightbox
 {
 	padding-top: 15px;
 	text-align: center;
 	padding-bottom: 15px;
-}
-
-.pic:hover
-{
-	opacity: 0.5;
-	cursor: pointer;
 }
 
  .modal-content 
@@ -621,6 +643,112 @@ margin-top: -150px;
  }
  
 
+
+/*PHOTOGRAPHY*/
+#photography
+	{
+	background-color: $yellow-font-color;
+	height: 400px;
+	-ms-transform: skewY(-20deg);
+	-webkit-transform: skewY(-20deg);
+	transform: skewY(-20deg);
+	margin-top: 135%;
+	}
 	
+	#photography h2
+	{
+	color: $dark-grey; 
+	-ms-transform: skewY(20deg);
+	-webkit-transform: skewY(20deg);
+	transform: skewY(20deg);
+	font-size: 2.4em;
+	padding: 20px;
+	margin-right: 20px;
+	text-align: right;
+	padding-top: 20%;
+	}
+
+	#photography p{
+		color: $dark-grey; 
+		-ms-transform: skewY(20deg);
+		-webkit-transform: skewY(20deg);
+		transform: skewY(20deg);
+		text-align:center;
+		padding: 20px;
+		padding-top: 20px;
+		font-size: 1.1em;
+		line-height: 1.3em;
+			
+		}
+
+	#photographyImgs{
+		margin-top: 20%;
+		cursor: pointer;
+	}
+
+	#photographyImgs img:hover{
+		opacity: 0.7;
+	}
+
+	/*CONTACT US*/
+
+	#contact h2{
+		color: $main-app-color; 
+		text-align: center;
+		font-size: 2.4em;
+		margin-top: -50%;
+	}
 	
-} //END OF MOBILE
+	#contactForm
+	{
+		float: left;
+		letter-spacing: 0.5px;
+		font: 15px arial, sans-serif;
+		line-height: 3em;
+		padding: 10%;
+		width: 80%;
+		margin-top: 30%;
+	}
+
+	#contactForm label
+	{
+		display: block;
+		color: $dark-grey;
+	}
+
+	#submit{
+		color: $dark-grey;
+		padding: 5px;
+		border-radius: px;
+		background-color:$yellow-font-color;
+		width: 20% !important;
+		cursor: pointer;
+	}
+
+	#contactForm input{
+		width: 100%;
+		height: 20px;
+	}
+
+	/*FOOTER*/
+
+
+	#bottom{
+		background-color:$dark-grey;
+		width: 100%;
+		height: 50px;
+		margin-top: 150%;
+	}
+
+	
+
+	footer img{
+		width: 40%;
+		height: 40%;
+		float: right;
+		display: inline;
+		cursor: pointer;
+		filter: brightness(0) invert(1);
+	}
+	
+}
