--- a/sass/modules/_mobile.scss
+++ b/sass/modules/_mobile.scss
@@ -227,9 +227,9 @@ text-shadow: 0px 0px 20px $dark-grey, 0px 0px 30px $light-grey;
 }
 	
 #alliBio p
-{
-	display: block;
+{	
 	text-align: right;
+	display: block;
 	font-size: 1.1em;
 	padding:30px;
 }
@@ -730,11 +730,15 @@ text-shadow: 0px 0px 20px $dark-grey, 0px 0px 30px $light-grey;
 		height: 20px;
 	}
 
+	#comments{
+		width: 100%;
+	}
+
 	/*FOOTER*/
 
 
 	#bottom{
-		background-color:$dark-grey;
+		background-color:$light-grey;
 		width: 100%;
 		height: 50px;
 		margin-top: 150%;
@@ -743,10 +747,10 @@ text-shadow: 0px 0px 20px $dark-grey, 0px 0px 30px $light-grey;
 	
 
 	footer img{
-		width: 40%;
 		height: 40%;
+		margin-top: 10px;
+		margin-right: 15px;
 		float: right;
-		display: inline;
 		cursor: pointer;
 		filter: brightness(0) invert(1);
 	}
