--- a/sass/modules/_tablet.scss
+++ b/sass/modules/_tablet.scss
@@ -14,16 +14,16 @@
 	  text-decoration: none;
 	  transition: color 0.7s ease;
 	  color: $dark-grey;
-	  font-weight: bold;
 	}
 	
 	a:hover
 	{
-	  color: $main-app-color; 
+	  color: $light-grey; 
 	  text-decoration: underline;
+	  font-weight: bold;
 	}
 		
-	.jpg
+	.png
 		{
 			display:none !important;
 		}
@@ -32,94 +32,43 @@
 		{
 			display: none !important;
 		}
-	
-	
-	/* MENU TOGGLE*/
-	
-	
-	#menuToggle
-	{
-	  display: block;
-	  position: fixed;
-	  top: 50px;
-	  left: 50px;
-	  z-index: 1;
-	}
-	
-	#menuToggle input
-	{
-	  display: block;
-	  width: 40px;
-	  height: 32px;
-	  position: absolute;
-	  top: -7px;
-	  left: -5px;
-	  cursor: pointer;
-	  opacity: 0; 
-	  z-index: 2; 
-	}
-	
-	#menuToggle span
-	{
-	  display: block;
-	  width: 30px;
-	  height: 4px;
-	  margin-bottom: 5px;
-	  position: relative;
-	  background: $dark-grey;
-	  z-index: 1;
-	  transform-origin: 4px 0px;
-	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-				  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-				  opacity 0.55s ease;
-	}
-	
-	
-	#menuToggle input:checked ~ span
-	{
-	  opacity: 1;
-	  transform: rotate(47deg) translate(2px, -1px);
-	  background: $dark-grey;
-	}
-	
-	#menuToggle input:checked ~ span:nth-last-child(3)
-	{
-	  opacity: 0;
-	}
-	
-	#menuToggle input:checked ~ span:nth-last-child(2)
-	{
-	  transform: rotate(-47deg) translate(0, -1px);
-	}
-		
-	#menu
-	{
-	  position: fixed;
-	  margin: -100px 0 0 -50px;
-	  width: 200px;
-	  padding-top: 100px;
-	  background: $yellow-font-color;
-	  list-style-type: none;
-	  -webkit-font-smoothing: antialiased;
-	  transform-origin: 0% 0%;
-	  transform: translate(-100%, 0);
-	  transition: transform 0.7s;
-	}
+
+	/*NAVIGATION*/
 	
 	#menu li
 	{
-	  padding: 15px;
-	  font-size: 1.3em;
+	  padding: 5px;
+	  display: block;
+	  color: $main-app-color;
+	  font-weight: lighter;
+	  text-transform: uppercase;
+	  text-align: center;
+	  float: left;
+	  width: 15%;
+	  font-size: 60%;
+	  padding-top: 30px;
 	}
 	
 	
-	#menuToggle input:checked ~ ul
+	#menu{
+		list-style-type: none;
+		position: fixed;
+		background-color: black;
+		margin-top: -58%;
+		z-index: 1;
+		height: 60px;
+		width: 100%;
+		text-align: center;
+	}
+
+	#menu li:hover{
+		color: $yellow-font-color;
+	}
+
+	#checkbox
 	{
-	  transform: none;
+		display:none;
 	}
-	
-	
-	
 	
 	
 	
@@ -135,10 +84,11 @@
 	{
 	color: $yellow-font-color;
 	position: absolute;
-	font-size: 3em;
-	margin-left: 20px;
-	margin-top: -150px;
-	text-shadow: 0px 0px 20px $dark-grey, 0px 0px 30px $light-grey;
+	margin-top: -40%;
+	margin-left: 10%;
+	margin-right: 10%;
+	text-align: center;
+	font-size: 5em;
 	}
 	
 	
@@ -158,82 +108,113 @@
 	#team h1
 	{
 		color: $main-app-color;
-		position: absolute;
-		top: 5%;
-		text-align: right;
+		text-align: center;
 		font-size: 2.4em; 
-		margin-left: 40%;
-		margin-right:10px;
-		text-shadow: 0px 0px 1px $yellow-font-color, 0px 0px 1px $yellow-font-color;
+		position: absolute;
+		background-color: $yellow-font-color;
+		width: 100%;
+		margin-top: 40%;
+		height: 90px;
+	}
+
+	#team h1 br{
+		display: none;
 	}
 	
-	#team span /*white line under meet the team*/
+	#team span /*line under meet the team*/
 	{
 	  display: block;
-	  width: 100px;
+	  width: 10%;
 	  height: 5px;
 	  position: absolute;
-	  top: 107%;
+	  text-align: center;
 	  background: $main-app-color;
-	  margin-left:45%;
+	  margin-left: 45%;
+	  margin-right: 45%;
+
+	}
+
+	#theTeam
+	{
+		width: 100%;
+		text-align: center;
 	}
 	
-	.teamImg
-	{
-		-webkit-filter: contrast(45%);
-		filter: contrast(45%);
-		display: block;
-	}
+
 	
 	#team p
 	{
-		color: $main-app-color;
+		color: $dark-grey;
 		position: absolute;
-		text-align: right;
+		text-align: center;
 		font-size: 120%; 
 		margin-left: 10%;
 		padding-right: 10%;
-		margin-top: -240px;
+		margin-top: 10%;
 	}
 	
 	
 	
-	/*ALLISON*/
+	/*ALLISON AND SORAYA*/
 	
-	#alli
+	#alli /*container for images*/
 	{
 		position: relative;
 		display: block;
 		width: 100%;
-		margin-top: -100px;
 		clear: both;
+		margin-top: 49%;	
 	}
 	
 	#alliTitle
 	{
-		color: $main-app-color; 
-		position: absolute;
-		top: 60%;
-		text-align: right;
-		font-size: 2.4em;
-		margin-left: 50%;
+		color: $dark-grey; 
+		position: relative;
+		text-align: center;
+		font-size: 90%;
+		width: 50%;
+
+	}
+
+	#alliTitle br{
+		display: none;
 	}
 		
 	#alliBio
 	{
 		color: $dark-grey;
-		display: block;
-		text-align: right;
-		height:300px;
+		text-align: center;
+		position: relative;
+		width: 46%;
+		margin: 2%;
+		float: left;
 	}
 		
 	#alliBio p
 	{
-		display: block;
-		text-align: right;
-		font-size: 1.1em;
-		padding:30px;
+		text-align: center;
+		font-size: 0.9em;
 	}
+
+	.alliImg
+	{
+		width: 50%;
+		float: left;
+	}
+
+	.sorayaImg
+	{
+		width: 50%;
+		float: left;
+	}
+
+	.notab
+	{
+		display: none;
+	}
+
+
+	
 	
 	
 	/*SORAYA*/
@@ -241,37 +222,43 @@
 	#soraya
 	{
 		position: relative;
-		display: block;
-		width: 100%;
-		margin-top: -100px;
-		clear:both;
+		width: 50%;
+		float:left;
+		margin-top: -20%;
 	}
+	
+
+	#sorayaTitle br{
+		display: none;
+
+	}
+
 		
 	#sorayaTitle
 	{
-		color: $main-app-color; 
-		position: absolute;
-		top: 60%;
-		text-align: right;
-		font-size: 2.4em;
-		margin-left: 60%;
+		color: $dark-grey; 
+		text-align: center;
+		font-size: 90%;
+		position: relative;
+		margin-top: 31%;
 	}
 	
 		
 	#sorayaBio
 	{
 		color: $dark-grey;
-		position: block;
-		text-align: right;
-		height:300px;
+		text-align: center;
+		display: block;
+		position: relative;
+		width: 46%;
+		margin: 2%;
+		float: left;
 	}
 		
 	#sorayaBio p
 	{
-		position: block;
-		text-align: right;
-		font-size: 1.1em;
-		padding:30px;
+		text-align: center;
+		font-size: 0.9em;
 	}
 		
 		
@@ -280,32 +267,10 @@
 		
 	#quote
 	{
-		background-color: $light-grey;
-		display: block;
-		text-align: right;
-		height: 400px;
-		-ms-transform: skewY(-20deg);
-		-webkit-transform: skewY(-20deg);
-		transform: skewY(-20deg);
-		border-bottom-color: $yellow-font-color;
-		border-bottom-width: 30px;
-		border-bottom-style: solid;
+		display: none;
 	}
 		
-		#quote p
-	{
-		display: block;
-		text-align: center;
-		font-size: 2em;
-		-ms-transform: skewY(20deg);
-		-webkit-transform: skewY(20deg);
-		transform: skewY(20deg);
-		color: $main-app-color;
-		padding-top: 30%;
-		font-style: italic;
-		line-height: 50px;
-		letter-spacing: 4px;
-	}
+	
 	
 	
 		
@@ -319,8 +284,8 @@
 		position: relative;
 		display: block;
 		width: 100%;
-		margin-top: -100px;
-		clear:both;
+		margin-top: 40%;
+		text-align: center;
 	}
 		
 	#portfolioText
@@ -330,12 +295,13 @@
 		top: 30%;
 		text-align: center;
 		font-size: 2.4em;
-		margin-left:80px;
+		width: 100%
 	}
 		
 	#portfolioAbout
 	{
 		height: 300px;
+		text-align: center;
 			
 	}
 		
@@ -344,67 +310,49 @@
 		text-align: center;
 		color: $dark-grey;
 		font-size: 1.1em;
-		padding-left: 10px;
-		padding-right: 10px;
+		padding-left: 10%;
+		padding-right: 10%;
+		width: 80%;
+		float: left;
+		margin-top: 7%;
 			
 	}
 		
 	//WEB DESIGN
 		
-		.greyLine
-		{
-			background-color: $light-grey;
-			height: 40px;
-			width: 100%;
-			display: block;
-			position: relative;
-		}
 	
 		#webDesign
 		{
 		background-color: $yellow-font-color;
 		display: block;
 		text-align: right;
-		height: 400px;
-		-ms-transform: skewY(-20deg);
-		-webkit-transform: skewY(-20deg);
-		transform: skewY(-20deg);
+		height: 300px;
 		}
 		
 		#webDesign h2
 		{
 		color: $dark-grey; 
-		-ms-transform: skewY(20deg);
-		-webkit-transform: skewY(20deg);
-		transform: skewY(20deg);
 		font-size: 2.4em;
 		padding: 20px;
 		margin-right: 20px;
+		text-align: center;
 		}
 		
 		
 		#webDesign p{
 		color: $dark-grey; 
-		-ms-transform: skewY(20deg);
-		-webkit-transform: skewY(20deg);
-		transform: skewY(20deg);
 		text-align:center;
-		padding: 20px;
-		padding-top: 20px;
-		font-size: 1.1em;
+		padding-left: 5%;
+		padding-right: 5%;
+		font-size: 1.4em;
 		line-height: 1.3em;
-			
 		}
 		
 		
 		.webDesignImg
 		{
-		-ms-transform: skewY(20deg);
-		-webkit-transform: skewY(20deg);
-		transform: skewY(20deg);
 		display: block;
 		position: relative;
-		padding-top:150px;
 		}
 		
 		#webDesignText
@@ -414,16 +362,18 @@
 			display: block;
 			height: 200px;
 			width: 100%;
-			margin-top:380px;
+			margin-top: 55%;
+			margin-bottom: -20%;
 		}
 		
 		#webDesignText p
 		{
 			color: $dark-grey;
 			text-align: center;
-			padding: 30px;
-			font-size: 1.1em;
+			font-size: 1.3em;
 			line-height: 1.2em;
+			padding: 3%;
+
 		}
 		
 		
@@ -434,39 +384,30 @@
 		{
 		background-color: $yellow-font-color;
 		display: block;
-		text-align: right;
-		height: 400px;
-		-ms-transform: skewY(20deg);
-		-webkit-transform: skewY(20deg);
-		transform: skewY(20deg);
+		text-align: center;
+		height: 300px;
 		}
 		
 		#graphicDesign h2
 		{
 		color: $dark-grey; 
-		-ms-transform: skewY(-20deg);
-		-webkit-transform: skewY(-20deg);
-		transform: skewY(-20deg);
 		font-size: 2.4em;
-		padding: 20px;
-		padding-top:40px;
 		margin-left: 5px;
-		text-align: left;
-		margin-top: 100px;
+		padding-top: 5%;
+		text-align: center;
+		margin-top: 20%;
 		}
 		
 		
 		#graphicDesign p{
 		color: $dark-grey; 
-		-ms-transform: skewY(-20deg);
-		-webkit-transform: skewY(-20deg);
-		transform: skewY(-20deg);
 		text-align:center;
-		padding: 20px;
-		font-size: 1.1em;
+		font-size: 1.4em;
 		line-height: 1.2em;
 		position:absolute;
 		display: block;
+		padding-right: 5%;
+		padding-left: 5%;
 			
 		}
 		
@@ -477,7 +418,6 @@
 		{
 			width: 100%;
 			background-color: $light-grey;
-			margin-top: 18%;
 		}
 	
 		#mi
@@ -517,6 +457,7 @@
 		position:absolute;
 		height:100%;
 		width:100%; 
+		font-size: 1.6em;
 	}
 	
 	.content .rs{
@@ -555,7 +496,7 @@
 		display: none;
 		position: fixed;
 		z-index: 1;
-		padding-top: 150px;
+		padding-top: 105px;
 		left: 0;
 		top: 0;
 		width: 100%;
@@ -633,14 +574,13 @@
 	
 	#lightbox
 	{
-		padding-top: 15px;
 		text-align: center;
 		padding-bottom: 15px;
 	}
 	
 	 .modal-content 
 	 {
-			width: 100%;
+			width: 80%;
 	 }
 	 
 	
@@ -649,41 +589,29 @@
 	#photography
 		{
 		background-color: $yellow-font-color;
-		height: 400px;
-		-ms-transform: skewY(-20deg);
-		-webkit-transform: skewY(-20deg);
-		transform: skewY(-20deg);
-		margin-top: 135%;
+		height: 300px;
+		margin-top: 100%;
 		}
 		
 		#photography h2
 		{
 		color: $dark-grey; 
-		-ms-transform: skewY(20deg);
-		-webkit-transform: skewY(20deg);
-		transform: skewY(20deg);
 		font-size: 2.4em;
-		padding: 20px;
 		margin-right: 20px;
-		text-align: right;
-		padding-top: 20%;
+		text-align: center;
+		padding-top: 10%;
 		}
 	
 		#photography p{
 			color: $dark-grey; 
-			-ms-transform: skewY(20deg);
-			-webkit-transform: skewY(20deg);
-			transform: skewY(20deg);
 			text-align:center;
 			padding: 20px;
-			padding-top: 20px;
-			font-size: 1.1em;
+			font-size: 1.4em;
 			line-height: 1.3em;
 				
 			}
 	
 		#photographyImgs{
-			margin-top: 20%;
 			cursor: pointer;
 		}
 	
@@ -728,26 +656,30 @@
 	
 		#contactForm input{
 			width: 100%;
-			height: 20px;
+			height: 30px;
+		}
+
+		#comments{
+			width: 100%;
 		}
 	
 		/*FOOTER*/
 	
 	
 		#bottom{
-			background-color:$dark-grey;
+			background-color:$light-grey;
 			width: 100%;
-			height: 50px;
+			height: 80px;
 			margin-top: 150%;
 		}
 	
 		
 	
 		footer img{
-			width: 40%;
-			height: 40%;
+			height: 50%;
+			margin-top: 20px;
+			margin-right: 15px;
 			float: right;
-			display: inline;
 			cursor: pointer;
 			filter: brightness(0) invert(1);
 		}
